--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
-    <div class="container"></div>
+    <main class="main-content">
+        <div class="container"></div>
+    </main>
 </body>
 </html>
