Add basic style and a title

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
+    <h1 class="main-title">Tic Tac Toe!</h1>
+    
     <main class="main-content">
         <div class="container"></div>
     </main>
