Add inputs and start/reset button

--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
 </head>
 <body>
     <h1 class="main-title">Tic Tac Toe!</h1>
-    
+    <div class="set-up">
+        <div class="player">
+            <label for="player1">Player 1 name:</label>
+            <input type="text" name="player1" id="player1" placeholder="Player1">
+        </div>
+        <div class="player">
+            <label for="player2">Player 2 name:</label>
+            <input type="text" name="player2" id="player2" placeholder="Player2">
+        </div>
+        <button type="button" class="start-reset">Start</button>
+    </div>
     <main class="main-content">
         <div class="container"></div>
     </main>
