Modify win counter function and board style

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
     <h1 class="main-title">Tic Tac Toe!</h1>
     <div class="set-up">
-        <div class="player">
-            <label for="player1">Player 1 name:</label>
+        <div class="players name1">
+            <label for="player1">Player 1 name</label>
             <input type="text" name="player1" id="player1" placeholder="Player1">
         </div>
-        <div class="player">
-            <label for="player2">Player 2 name:</label>
+        <div class="players name2">
+            <label for="player2">Player 2 name</label>
             <input type="text" name="player2" id="player2" placeholder="Player2">
         </div>
         <button type="button" class="start-reset">Start</button>
