Show player turn

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </div>
     <main class="main-content">
         <div class="container"></div>
+        <p class="play-turn"></p>
     </main>
 </body>
 </html>
